--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
             <i class="fa-solid fa-less-than"></i>
           </div>
           <div
-            class="text-[18px] text-slate-500 sm:w-[820px] w-[50vw]"
+            class="text-[18px] text-slate-500 sm:w-[820px] sm:h-[auto] h-[420px] w-[50vw]"
             id="text">
             “Donec facilisis quam ut purus rutrum lobortis. Donec vitae odio
             quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam
@@ -355,7 +355,7 @@
             turpis egestas. Integer convallis volutpat dui quis scelerisque.”
           </div>
           <div
-            class="text-[18px] text-slate-500 sm:w-[820px] w-[50vw] hidden"
+            class="text-[18px] text-slate-500 sm:w-[820px] w-[50vw] sm:h-[auto] h-[420px] hidden"
             id="text2">
             “If you've seen the word testimony — meaning spoken evidence in
             court — then you might have a clue to the meaning of testimonial.
@@ -457,7 +457,7 @@
         </a>
       </div>
     </section>
-    <footer class="sm:h-[100vh] bg-[#FFFFFF]">
+    <footer class="sm:h-[92vh] bg-[#FFFFFF]">
       <div class="flex relative">
         <div class="flex flex-col gap-4 pt-20 sm:pl-16 pl-10">
           <div class="flex">
