--- a/index.html
+++ b/index.html
@@ -559,7 +559,7 @@
         </div>
       </div>
       <div
-        class="sm:h-[1px] sm:w-[1300px] bg-[#D7E1DF] sm:ml-14 mt-20 h-[2px] w-[100vw]"></div>
+        class="sm:h-[1px] sm:w-[80vw] bg-[#D7E1DF] sm:ml-14 mt-20 h-[2px] w-[100vw]"></div>
       <div
         class="sm:flex sm:flex-row justify-between sm:pl-14 sm:pr-16 sm:pt-10 sm:pb-0 pb-10 pt-10 sm:gap-0 flex flex-col gap-10 items-center px-4">
         <div class="text-slate-500 text-[14px]">
