--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
         </div>
       </div>
       <div
-        class="sm:flex sm:flex-row sm:justify-between sm:px-10 sm:px-0 sm:gap-0 gap-20 items-center flex flex-col">
+        class="sm:flex sm:flex-row sm:justify-between sm:px-10 gap-20 items-center flex flex-col">
         <a href="#" class="flex flex-col gap-2" id="photo-div">
           <div>
             <img
